--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
   "description": "Event sourced programming in Typescript",
   "author": "Adam Johnston",
   "license": "MIT",
-  "main": "src/esp.ts",
   "source": "src/esp.ts",
   "types": "dist/esp.d.ts",
   "module": "dist/esp.module.js",
@@ -28,7 +27,8 @@
   },
   "devDependencies": {
     "microbundle": "^0.15.1",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "ts-to-zod": "^1.13.1"
   },
   "dependencies": {
     "@types/jest": "^29.2.2",
@@ -36,6 +36,7 @@
     "jest": "^29.3.1",
     "rxjs": "^7.5.7",
     "ts-jest": "^29.0.3",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "zod": "^3.19.1"
   }
 }
