--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "scripts": {
     "build": "microbundle --target node",
     "dev": "microbundle watch --target node",
-    "test": "jest test",
+    "test": "jest --runInBand",
     "start": "node dist/esp.modern.js",
     "clean": "rm -r dist &2> /dev/null"
   },
